--- a/report/github.tex
+++ b/report/github.tex
@@ -20,9 +20,9 @@ the source code repositories, as well as other development activities, of many
 open-source software projects.
 
 To what extent does the diversity of programming language fragment the software
-development community? We anticipate that collaborations between projects using
-the same programming language (or especially the same software framework) will
-be common, resulting in communities identified by a programming language.
+development community? We anticipate that the frequency of collaboration between
+projects using the same programming language (or software framework, especially)
+will result in communities identified by a programming language.
 
 In this paper, we construct the one-mode network of repositories and examine its
 community structure, comparing communities defined by programming languages to
