--- a/report/github.bib
+++ b/report/github.bib
@@ -139,5 +139,13 @@
     pages     = {1--4},
     year      = {2012},
 }
+@misc{cuny10,
+    author       = "Franck Cuny",
+    title        = "Github explorer",
+    year         = "2010",
+    month        = "March",
+    howpublished =
+        "\url{http://lumberjaph.net/graph/2010/03/25/github-explorer.html}"
+}
 
 % vim: ts=4 sts=4 sw=4 et tw=80
