--- a/report/github.tex
+++ b/report/github.tex
@@ -31,16 +31,17 @@ those determined by common community-detection algorithms.
 \section{Related Work}
 Some recent analyses have examined the programming languages associated with
 each user via their repositories to determine conditional probabilities
-\cite{doll12} or correlations \cite{shah13} relating to use of language pairs. A
-visualization of the bipartite graph of organizations (groups of users) and
-languages \cite{rodrigues12} won third place in the 2012 GitHub Data Challenge,
-and \cite{weber12} performed preliminary analysis of user communities based on
-primary programming languages.
+\cite{doll12} or correlations \cite{shah13} relating to use of language pairs.
+
+User communities based on primary programming languages and ``follower''
+relationships were explored in \cite{cuny10,weber12}.  A visualization of the
+bipartite graph of organizations (groups of users) and languages
+\cite{rodrigues12} won third place in the 2012 GitHub Data Challenge.
 
 Methods for generating the the project-project and user-user networks are
 described in \cite{thung2013} and used to find nodes with high PageRank values.
 A weighted community detection algorithm for use in evaluating the GitHub
-network is described in \cite{marrama}.
+network is presented in \cite{marrama}.
 
 \section{Methodology}
 Data was obtained using SQL queries against the Google BigQuery web interface.
