fix GitHub capitalizations in bibliography

--- a/report/github.bib
+++ b/report/github.bib
@@ -45,13 +45,13 @@
 }
 @misc{shah13,
     author       = "Shah, Akshay",
-	title        = "Language Use on GitHub",
+	title        = "Language Use on {GitHub}",
 	year         = "2013",
 	month        = "February",
     howpublished = "\url{http://datahackermd.com/2013/language-use-on-github/}"
 }
 @inproceedings{thung2013,
-    title        = {Network Structure of Social Coding in GitHub},
+    title        = {Network Structure of Social Coding in {GitHub}},
     author       = {Thung, Ferdian and Lo, David and Jiang, Lingxiao},
     year         = {2013},
     organization = {17th European Conference on Software Maintenance and Reengineering (CSMR)}
@@ -82,8 +82,8 @@
 }
 @misc{strata13,
     author       = "Ilya Grigorik and Brian Doll",
-    title        = "Analyzing Millions of GitHub Commits: What Makes Developers
-        Happy, Angry, and Everything in Between?",
+    title        = "Analyzing Millions of {GitHub} Commits: What Makes
+        Developers Happy, Angry, and Everything in Between?",
     howpublished = "\url{https://youtu.be/U_LNo_cSc70}"
 }
 @article{opsahl09,
@@ -127,7 +127,7 @@
 @article {weber12,
     author    = {Weber, Nicholas M.},
     title     = {Combined methods, thick descriptions: Languages of
-        collaboration on Github},
+        collaboration on {Github}},
     journal   = {Proceedings of the American Society for Information Science
         and Technology},
     volume    = {49},
