one column, larger font

--- a/report/github.tex
+++ b/report/github.tex
@@ -1,5 +1,4 @@
-\documentclass[twocolumn]{article}
-\usepackage{fullpage}
+\documentclass[11pt]{article}
 \usepackage{hyperref}
 \urlstyle{same}
 \usepackage{amsmath}
