credit sigma.js

--- a/report/github.tex
+++ b/report/github.tex
@@ -45,8 +45,8 @@ network is presented in \cite{marrama}.
 \section{Methodology}
 Data was obtained using SQL queries against the Google BigQuery web interface.
 Further analysis was performed using Python 2.7 and version 0.6.5 of the igraph
-library, and visualizations were created using Gephi 0.8.2. All SQL and Python
-code, along with data files, are available in this project's repository at
+library, and visualizations were created using Gephi 0.8.2 and sigma.js. All SQL
+and Python code, along with data files, is available at
 \url{https://github.com/coyotebush/github-network-analysis}.
 
 \section{Data Collection}
