start describing visualization

--- a/report/github.tex
+++ b/report/github.tex
@@ -101,7 +101,23 @@ communities).
         the programming language composition of the resulting structure.
 \end{itemize}
 
-\subsection{Visualization}
+\section{Visualization}
+A visualization of the network using the ForceAtlas 2 layout algorithm, with
+nodes colored according to programming language and sized according to number of
+stars, is shown in figure~\ref{fig:fullnetwork}. An interactive version is
+available at \url{http://coyotebush.github.io/github-network-analysis/}.
+
+\begin{figure}[htbp]
+    \centering
+    (Visualization goes here)
+    \caption{GitHub repository network.}
+    \label{fig:fullnetwork}
+\end{figure}
+
+Some language-based communities are already visually evident, including Ruby
+(pink), JavaScript (pale blue), Python (yellow) and Objective-C (dark blue).
+
+\section{Analysis}
 
 \subsection{Communities Defined by Language}
 
