--- a/report/github.tex
+++ b/report/github.tex
@@ -130,6 +130,9 @@ This project is being developed both as the final project for a course in social
 network analysis \cite{snacourse}, and as an entry in the GitHub Data Challenge
 \cite{doll13}.
 
+Thanks to Peter Faiman and Corey Farwell for help regarding SQL and
+visualization, respectively.
+
 \bibliographystyle{plain}
 \bibliography{github}
 
