comments on visualized language communities

--- a/github.tex
+++ b/github.tex
@@ -109,8 +109,15 @@ available at \url{http://coyotebush.github.io/github-network-analysis/}.
     \label{fig:fullnetwork}
 \end{figure}
 
-Some language-based communities are already visually evident, including Ruby
-(pink), JavaScript (pale blue), Python (yellow) and Objective-C (dark blue).
+Some language-based communities are already visually evident, including
+\begin{itemize}
+    \item Ruby (pink), which is noticeably centered around the prominent Ruby on
+        Rails project; see figure~\ref{fig:ruby}.
+    \item JavaScript (pale blue), the most popular language on GitHub and very
+        central to this network.
+    \item Python (yellow).
+    \item Objective-C (dark blue), which is relatively sparse.
+\end{itemize}
 
 \section[Analysis]{Analysis\footnote{This section was created using Pweave
 (\url{http://mpastell.com/pweave/}) and
