remove Marrama from intro

--- a/github.tex
+++ b/github.tex
@@ -40,10 +40,8 @@ relationships were explored in \cite{cuny10,weber12}.  A visualization of the
 bipartite graph of organizations (groups of users) and languages
 \cite{rodrigues12} won third place in the 2012 GitHub Data Challenge.
 
-Methods for generating the the project-project and user-user networks are
-described in \cite{thung2013} and used to find nodes with high PageRank values.
-A weighted community detection algorithm for use in evaluating the GitHub
-network is presented in \cite{marrama}.
+Important nodes in the one-mode project-project and user-user networks, weighted
+simply by number of common links, were identified in \cite{thung2013}.
 
 \section{Methodology}
 Data was obtained using SQL queries against the Google BigQuery web interface.
