add top nodes lists

--- a/github.tex
+++ b/github.tex
@@ -3,6 +3,7 @@
 \urlstyle{same}
 \usepackage{amsmath}
 \usepackage{booktabs}
+\usepackage{subcaption}
 \usepackage{minted}
 \usemintedstyle{tango}
 \usepackage{inconsolata}
@@ -120,7 +121,7 @@ Some language-based communities are already visually evident, including
 
 \section[Analysis]{Analysis\footnote{This section was created using Pweave
 (\url{http://mpastell.com/pweave/}) and
-matrix2latex(\url{http://code.google.com/p/matrix2latex/})}}
+matrix2latex (\url{http://code.google.com/p/matrix2latex/})}}
 
 \input{analysis.tex}
 
