--- a/github.tex
+++ b/github.tex
@@ -126,6 +126,34 @@ matrix2latex (\url{http://code.google.com/p/matrix2latex/})}}
 \input{analysis.tex}
 
 \section{Discussion}
+First, it is clear that `rails/rails', the Ruby on Rails web application
+framework, is a very important project on GitHub. This makes sense considering
+that many websites, including GitHub itself, use Rails, and that there is a
+strong community of Rails plugins on GitHub.  Many of the other repositories in
+tables~\ref{tab:degree}, \ref{tab:between}, and \ref{tab:betweenw}, such as
+`github/hubot-scripts', `carlhuda/bundler', `gitlabhq/gitlabhq', and
+`robbyrussell/oh-my-zsh', serve as development tools moreso than as independent
+frameworks/applications, so their significance is likely due to their use by
+developers who primarily code in any of a wide variety of other languages.
+Weighted degree (table \ref{tab:degreew}), which best represents the amount of
+collaboration surrounding a project, includes none of these---Rails, Symfony,
+and Silex are all web application frameworks, and examining the visualization,
+most of the collaboration surrounding the two `ajaxorg' projects appears to be
+between the two.
+
+\subsection{Communities Defined by Language}
+The modularity resulting from clustering by language indicates significant
+community structure, especially in the weighted version, which considers amount
+of collaboration rather than merely its existence.
+
+Among the top languages, the subgraph density and clustering coefficients for
+competing languages Ruby, Python and PHP are notable. Although there are also
+many popular projects using Objective-C and Java, their lower clustering
+coefficients reflect the perhaps less open culture associated with these
+languages. JavaScript projects are abundant but loosely connected. The Shell
+network is quite sparse; again, most of these are probably development tools. 
+
+\subsection{Languages in Detected Communities}
 
 \section{Conclusions}
 
