rework repos discussion

--- a/github.tex
+++ b/github.tex
@@ -129,15 +129,16 @@ matrix2latex (\url{http://code.google.com/p/matrix2latex/})}}
 \input{analysis-repos.tex}
 
 \subsubsection{Discussion}
-First, it is clear that `rails/rails', the Ruby on Rails web application
-framework, is a very important project on GitHub. This makes sense considering
-that many websites, including GitHub itself, use Rails, and that there is a
-strong community of Rails plugins on GitHub.  Many of the other repositories in
-tables~\ref{tab:degree}, \ref{tab:between}, and \ref{tab:betweenw}, such as
-`github/hubot-scripts', `carlhuda/bundler', `gitlabhq/gitlabhq', and
-`robbyrussell/oh-my-zsh', serve as development tools moreso than as independent
-frameworks/applications, so their significance is likely due to their use by
-developers who primarily code in any of a wide variety of other languages.
+Clearly, `rails/rails', the Ruby on Rails web application framework, is a very
+important project on GitHub. This makes sense considering the strong community
+of Rails plugins on GitHub, and that GitHub itself uses Rails.
+
+Many of the other repositories in tables~\ref{tab:degree}, \ref{tab:between},
+and \ref{tab:betweenw} (excluding `mperham/sidekiq' and `visionmedia/mocha')
+serve as development tools moreso than as independent frameworks/applications,
+so their importance is likely due to their use by developers who primarily code
+in any of a wide variety of other languages.
+
 Weighted degree (table \ref{tab:degreew}), which best represents the amount of
 collaboration surrounding a project, includes none of these---Rails, Symfony,
 and Silex are all web application frameworks, and examining the visualization,
