--- a/github.tex
+++ b/github.tex
@@ -183,6 +183,9 @@ top programming languages in the dataset. This suggests that collaboration
 communities do, in large part, form around languages.
 
 \section{Conclusions}
+On analyzing the network of collaboration between top GitHub repositories, we
+find that programming language use is a reasonable indicator of community
+structure, and vice versa.
 
 \section{Acknowledgements}
 This project is being developed both as the final project for a course in social
