--- a/github.tex
+++ b/github.tex
@@ -183,8 +183,8 @@ computationally expensive, at best found a modularity of $0.290$, or $0.347$ for
 the weighted version.} While Infomap more cautiously finds smaller communities,
 in both cases most of the largest communities contain a majority of one of the
 top programming languages in the dataset. This suggests that collaboration
-communities do, in large part, form around languages. Some intra-language
-collaboration is also evident, especially related to JavaScript; this might be
+communities do, in large part, form around languages. Some inter-language
+collaboration is also evident, especially involving JavaScript; this might be
 explained by JavaScript's use as a secondary, client-side language in web
 applications written in another language.
 
@@ -194,11 +194,11 @@ find that programming language use is a reasonable indicator of community
 structure, and vice versa. Still, there is plenty of collaborative activity
 between projects using different languages.
 
-A more complete picture might be obtained by lowering the threshold for
-including repositories, thereby including less popular side projects, or by
-changing the time range under consideration. Further work might also more
-carefully analyze the relationships between languages themselves, ideally
-incorporating data on non-primary languages used in a project.
+A more complete picture might be obtained by lowering the star threshold for
+including repositories, or by changing the time range under consideration.
+Further work might also more carefully analyze the relationships between
+languages themselves, ideally incorporating data on non-primary languages used
+in a project.
 
 \section{Acknowledgements}
 This project is being developed both as the final project for a course in social
